fixed z-index

--- a/portfolio/static/portfolio/css/gallery.less
+++ b/portfolio/static/portfolio/css/gallery.less
@@ -72,6 +72,7 @@
                 &:hover {
                     transform: scale(1.5, 1.5);
                     transition: all .3s;
+                    position: relative; // Makes z-index effective on Chrome
                     z-index: 1000;
                     .gentle-shadow(.5);
                 }
